chỉnh sửa AboutMe, code BMI.java, bmi.html và bmi.css

--- a/BaiTH1/src/main/webapp/aboutme.html
+++ b/BaiTH1/src/main/webapp/aboutme.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
-<title>About Me - CV</title>
+<title>About Me</title>
 <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 <link rel="stylesheet" href="css/style.css">
