--- a/BaiTH1/src/main/webapp/bmi.html
+++ b/BaiTH1/src/main/webapp/bmi.html
@@ -6,22 +6,22 @@
 <link rel="stylesheet" href="css/bmi.css">
 </head>
 <body>
-
+<div class="container">
 <h2>TÍNH CHỈ SỐ BMI</h2>
 
 <form action="BMI" method="post">
     <p>
         Chiều cao (m):<br>
-        <input type="text" name="height">
+        <input type="text" name="height" placeholder="Ví dụ: 1.7">
     </p>
 
     <p>
         Cân nặng (kg):<br>
-        <input type="text" name="weight">
+        <input type="text" name="weight" placeholder="Ví dụ: 65">
     </p>
 
     <input type="submit" value="Tính BMI">
 </form>
-
+</div>
 </body>
 </html>
